Name:           gtl-trace
Version:        0.1
Author:         Henning Günther <guenther@iti.cs.tu-bs.de>
		Henning Basold <h.basold@tu-braunschweig.de>
Build-Type:     Custom
Cabal-Version:  >= 1.10
Description:
  Support tool for gtl. Generates visualisations of error traces.

Library
  Build-Depends: base,array,containers
  Hs-Source-Dirs: lib
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    ScadeOutParser

Executable gtl-trace
  Build-Depends: base,gtl-trace
  Main-Is: Main.hs
