Name:           gtl-trace
Version:        0.1
Author:         Henning Günther <guenther@iti.cs.tu-bs.de>
		Henning Basold <h.basold@tu-braunschweig.de>
Build-Type:     Custom
Cabal-Version:  >= 1.10
Description:
  Support tool for gtl. Generates visualisations of error traces.

Executable gtl-trace
  default-language: Haskell2010
  Build-Depends: base,array,containers,uu-parsinglib,language-scade,fgl,graphviz,text,filepath,hood
  Hs-Source-Dirs: . lib
  GHC-Options: -Wall
  other-modules:
    ScadeOutParser
    ScadeStateGraph
    StateNameRecovery
  Main-Is: Main.hs
